# iboardbot-web

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  draw.py  requirements.txt  server.py  start.sh  svg2polylines.h  svg2polylines.py
.circleci/: config.yml
src/: main.rs  robot.rs  scaling.rs
static/: headless.html  index-preview.html  index.html
static/css/: style.css
static/fonts/: fonts.css
static/js/: common.js  headless.js  scripts.js
static/js/fabric/: fabric.js  fabric.min.js
templates/: index.html
