[package]
name = "iboardbot-web"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]

[dependencies]
bufstream = "0.1"
docopt = "0.8"
log = "0.3"
regex = "0.2"
scheduled-executor = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serial = "0.3"

[dependencies.svg2polylines]
version = "^0.4"
features = ["use_serde"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_codegen]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]
