[package]
name = "iboardbot-web"
version = "0.2.1"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dbrgn/iboardbot-web"

[dependencies]
actix-web = "0.7"
bufstream = "0.1"
docopt = "1"
futures = "0.1"
log = "0.4"
regex = "1"
scheduled-executor = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serial = "0.4"
simplelog = "0.5"
svg2polylines = { version = "0.5.1", features = ["serde"] }
time = "0.1"
